[Feature #161667831] modified title

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="A courier service for parcel delivery">
 	<meta name='author' content="Fiona Murie">
 	<link rel="stylesheet" type="text/css" href="../css/sendIT.css">
-	<title>SendIT | Welcome</title>
+	<title>SendIT | Registration</title>
 </head>
 <body>
 	<header>
