[Feature #161668423] adding an add order button

--- a/templates/parcel.html
+++ b/templates/parcel.html
@@ -72,6 +72,9 @@
 					<p class="pf">
 						<input type="submit" name="order" value="Place Order">
 					</p>
+					<p class="pf">
+						<button class="btn"><i class="fa fa-plus">Add Order</i></button>
+					</p>
 					
 				</form>
 			</div>
