--- a/css/sendIT.css
+++ b/css/sendIT.css
@@ -29,6 +29,9 @@ ul #card{
 .parcel{
 	
 }
+a{
+	text-decoration: none
+}
 
 
 
@@ -67,7 +70,8 @@ header nav{
 }
 
 header h1{
-	margin: auto;	
+	margin: auto;
+	padding: 0;	
 }
 
 header a:hover{
