--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
 					<li><a href="parcel.html">Parcel Delivery Service </a></li>
 					<li><a href="about.html">About Us</a></li>
 					<li><a href="registration.html">Register</a></li>
-					<li><a class="active" href="login.html">Login</a></li>
+					<li><a class="active" href="parcel.html">Login</a></li>
 				</ul>
 			</nav>		
 		</div>
