--- a/templates/admin.html
+++ b/templates/admin.html
@@ -80,7 +80,7 @@
 		</div>
 	</section>
 
-	<footer>
+	<footer id="adminFooter">
 		<div class="container">
 			<p> SendIT Courier Service, Copyright &copy 2018</p>				
 		</div>			
