--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
 		<div class="container">
 			<div id='card'>
 				<h1>Sign-in</h1>
-				<form>					
+				<form action="parcel.html">					
 					<p>
 						<label>Username</label><br>
 						<input type="text" name="uname" id="un">
