--- a/templates/parcel.html
+++ b/templates/parcel.html
@@ -70,7 +70,7 @@
 						</select>
 					</p>
 					<p class="pf">
-						<input type="submit" name="order" value="Place Order">
+						<input type="submit" name="order" value="Place Order" id="addOrder">
 					</p>
 					<p class="pf">
 						<button class="btn"><i class="fa fa-plus">Add Order</i></button>
@@ -139,7 +139,7 @@
 		</div>
 	</section>
 
-	<footer>
+	<footer id="parcelFooter">
 		<div class="container">
 			<p> SendIT Courier Service, Copyright &copy 2018</p>				
 		</div>			
